<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancle">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clear"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="clear"
                android:text="@string/clear"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#DD2C00" />

            <Button
                android:id="@+id/brackets"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="brackets"
                android:text="@string/parenthesis"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="@color/buttonBackground" />

            <Button
                android:id="@+id/exponent"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="exponent"
                android:text="@string/exponent"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="@color/buttonBackground" />

            <Button
                android:id="@+id/division"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="divide"
                android:text="@string/divide"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="@color/buttonBackground" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/seven"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="seven"
                android:text="@string/seven"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="@color/buttonBackground" />

            <Button
                android:id="@+id/eight"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="eight"
                android:text="@string/eight"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="@color/buttonBackground" />

            <Button
                android:id="@+id/nine"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="nine"
                android:text="@string/nine"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="@color/buttonBackground" />

            <Button
                android:id="@+id/multipliiication"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="multiply"
                android:text="@string/multiply"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="@color/buttonBackground" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/four"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="four"
                android:text="@string/four"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="@color/buttonBackground" />

            <Button
                android:id="@+id/five"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="five"
                android:text="@string/five"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="@color/buttonBackground" />

            <Button
                android:id="@+id/six"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="six"
                android:text="@string/six"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="@color/buttonBackground" />

            <Button
                android:id="@+id/subtract"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="subtract"
                android:text="@string/subtruct"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="@color/buttonBackground" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/one"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="one"
                android:text="@string/one"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="@color/buttonBackground" />

            <Button
                android:id="@+id/two"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="two"
                android:text="@string/two"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="@color/buttonBackground" />

            <Button
                android:id="@+id/three"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="three"
                android:text="@string/three"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="@color/buttonBackground" />

            <Button
                android:id="@+id/addition"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="add"
                android:text="@string/add"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="@color/buttonBackground" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/plusminus"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="plusminus"
                android:text="@string/plusminus"
                android:textSize="24sp"
                android:layout_margin="5dp"
                app:backgroundTint="@color/buttonBackground" />

            <Button
                android:id="@+id/zero"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="zero"
                android:text="@string/zero"
                android:textSize="24sp"
                android:layout_margin="5dp"
                app:backgroundTint="@color/buttonBackground" />

            <Button
                android:id="@+id/point"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="point"
                android:text="@string/point"
                android:textSize="24sp"
                android:layout_margin="5dp"
                app:backgroundTint="@color/buttonBackground" />

            <Button
                android:id="@+id/equal"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="equals"
                android:text="@string/equals"
                android:textSize="24sp"
                android:layout_margin="5dp"
                app:backgroundTint="#43A047" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:autofillHints="false"
        android:hint="@string/display"
        android:inputType="none"
        android:textAlignment="textEnd"
        android:textSize="36sp"
        android:layout_margin="5dp"
        android:maxLines="2"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previousCalculations" />

    <ImageButton
        android:id="@+id/cancle"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/backspace"
        android:onClick="cancle"
        android:src="@drawable/backspace"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="@+id/tableLayout"
        app:layout_constraintTop_toBottomOf="@+id/display" />

    <TextView
        android:id="@+id/previousCalculations"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:gravity="end"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>